test/regress/1A546C4D.test
2012/02/22 * Testing invalid amount
    Assets:Cash                   $1,00.00
    Equity:Opening Balances

test bal -> 1
__ERROR__
While parsing file "$sourcepath/test/regress/1A546C4D.test", line 2: 
While parsing posting:
  Assets:Cash                   $1,00.00
                                ^^^^^^^^
Error: Incorrect use of thousand-mark comma
end test

